# garbos-v2

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  garbos-v2-scope.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_create_users.py  0002_create_companies_contacts.py  0003_create_activities.py  0004_add_lifecycle_lead_score.py  0005_create_action_chains.py  0006_create_sequences.py  0007_create_deals_pipeline.py  0008_contact_lifecycle.py  0009_activity_message_sent.py  0010_sequence_recurrence.py  0011_email_polling.py  0012_api_token.py
api/app/: config.py  db.py  main.py
api/app/core/: dates.py  deps.py  security.py
api/app/domains/: __init__.py
api/app/domains/tasks/: __init__.py
api/app/models/: __init__.py  action_chain.py  activity.py  activity_type.py  base.py  chain_step.py  close_reason.py  company.py  contact.py  deal.py  email_ignore_entry.py  pipeline_stage.py  sequence.py  sequence_step.py  unmatched_email.py  user.py
api/app/routers/: activities.py  activity_types.py  auth.py  chains.py  close_reasons.py  companies.py  contacts.py  dashboard.py  deals.py  health.py  imports.py  leads.py  pipeline_stages.py  sequences.py  tasks.py  unmatched_emails.py
api/app/services/: enrollment.py  imap_poller.py
api/scripts/: backfill_step_due_dates.py  inspect_chain_due_dates.py  seed.py  verify_step_reschedule.py
chrome-extension/: INSTALL.md  background.js  content.js  make_icons.py  manifest.json  popup.html  popup.js
scripts/: import_contacts_batch.py
(+56 files in other folders)
